--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reporting-api-specifications",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
