--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reporting-api-specifications",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "version": "npm version && chmod +x update-version.sh && ./update-version.sh",
-    "verify": "openapi-linter lint ./public/openApi.json -f json -e error"
+    "verify": "openapi-linter lint ./public/schema.json -f json -e error"
   },
   "dependencies": {
     "react": "^18.2.0",
